Add streaming format selection to GUI

--- a/LocalAudioBroadcast/MainForm.resx
+++ b/LocalAudioBroadcast/MainForm.resx
@@ -124,70 +124,68 @@
     <value>
         AAEAAAD/////AQAAAAAAAAAMAgAAAFdTeXN0ZW0uV2luZG93cy5Gb3JtcywgVmVyc2lvbj0yLjAuMC4w
         LCBDdWx0dXJlPW5ldXRyYWwsIFB1YmxpY0tleVRva2VuPWI3N2E1YzU2MTkzNGUwODkFAQAAACZTeXN0
-        ZW0uV2luZG93cy5Gb3Jtcy5JbWFnZUxpc3RTdHJlYW1lcgEAAAAERGF0YQcCAgAAAAkDAAAADwMAAACq
-        DgAAAk1TRnQBSQFMAgEBBAEAAUABAAFAAQABEAEAARABAAT/ASEBAAj/AUIBTQE2BwABNgMAASgDAAFA
+        ZW0uV2luZG93cy5Gb3Jtcy5JbWFnZUxpc3RTdHJlYW1lcgEAAAAERGF0YQcCAgAAAAkDAAAADwMAAAA6
+        DgAAAk1TRnQBSQFMAgEBBAEAAUgBAAFIAQABEAEAARABAAT/ASEBAAj/AUIBTQE2BwABNgMAASgDAAFA
         AwABIAMAAQEBAAEgBgABIP8A/wD/AP8A/wD/AP8A/wD/AP8A/wD/AP8A/wD/AP8AKQABAQMCAQMDBAEF
-        AwQBBgMEAQYDAwEEAwEBAgQAAisBLAFDAkcBcgHqAgEBtQH/AgABtQH/AggBtgH/AgMBpAH+AlcBYAHQ
+        AwQBBgMEAQYDAwEEAwEBAgQAAisBLAFDAkoBbwHqAgABtQH/AgABtQH/AgcBtgH/AgMBogH+AlkBXgHQ
         BwABAQMCAQMDBAEFAwQBBgMEAQYDAwEEAwEBAicAAQEDAgEDAwQBBQMEAQYDBAEGAwMBBAMBAQInAAEB
         AwIBAwMEAQUDBAEGAwQBBgMDAQQDAQECJAADBAEGAwgBCwMMARADDgETAw0BEgMdASkDUgGjAzgBXAI5
-        AToBYAIEAcMB/wKuAe4B/wJ3AeUB/wK0AfAB/wJxAeQB/wIAAbMB/wQAAwQBBgMIAQsDDAEQAw4BEwMN
+        AToBYAIDAcMB/wKuAe4B/wJ2AeUB/wK0AfAB/wJwAeQB/wIAAbMB/wQAAwQBBgMIAQsDDAEQAw4BEwMN
         ARIDHQEpA1IBowM4AVwgAAMEAQYDCAELAwwBEAMOARMDDQESAx0BKQNSAaMDOAFcIAADBAEGAwgBCwMM
-        ARADDgETAw0BEgMdASkDUgGjAzgBXB8AAQEDBgEIAwoBDgMPARQDEgEZAxIBGAM6AWABkgGUAZMB/gNZ
-        AfICOQE6AWACBgHFAf8C0gH2Af8C/QH+Af8C/QH+Af8CjwHoAf8CAAG0Af8DAAEBAwYBCAMKAQ4DDwEU
-        AxIBGQMSARgDOgFgAZIBlAGTAf4DWQHyHwABAQMGAQgDCgEOAw8BFAMSARkDEgEYAzoBYAGSAZQBkwH+
-        A1kB8h8AAQEDBgEIAwoBDgMPARQDEgEZAxIBGAM6AWABkgGUAZMB/gNZAfIMAAMIAQsDBwEJDAADBAEG
-        AwoEDQERAw0BEgMvAUoDXAHPAa0BrwGuAf8DUgH3AjkBOgFgAgYBxQH/AqsB7gH/Av4C/wL9Af4B/wJn
+        ARADDgETAw0BEgMdASkDUgGjAzgBXB8AAQEDBgEIAwoBDgMPARQDEgEZAxIBGAM6AWABkAGSAZEB/gNZ
+        AfICOQE6AWACBQHFAf8C0gH2Af8C/QH+Af8C/QH+Af8CjwHoAf8CAAG0Af8DAAEBAwYBCAMKAQ4DDwEU
+        AxIBGQMSARgDOgFgAZABkgGRAf4DWQHyHwABAQMGAQgDCgEOAw8BFAMSARkDEgEYAzoBYAGQAZIBkQH+
+        A1kB8h8AAQEDBgEIAwoBDgMPARQDEgEZAxIBGAM6AWABkAGSAZEB/gNZAfIMAAMIAQsDBwEJDAADBAEG
+        AwoEDQERAw0BEgMvAUoDXAHPAa0BrwGuAf8DUgH3AjkBOgFgAgUBxQH/AqsB7gH/Av4C/wL9Af4B/wJm
         AeIB/wIAAbQB/wQAAwQBBgMKBA0BEQMNARIDLwFKA1wBzwGtAa8BrgH/A1IB9yAAAwQBBgMKBA0BEQMN
         ARIDLwFKA1wBzwGtAa8BrgH/A1IB9yAAAwQBBgMKBA0BEQMNARIDLwFKA1wBzwGtAa8BrgH/A1IB9wwA
-        AyoBQQJKAUkBiQMDAQQIAAM1AVUBVwJcAd8BVwJcAd8BVQJXAboDYAHeAZ8CogH+AbIBtQGzAf8DUgH3
+        AyoBQQJKAUkBiQMDAQQIAAM1AVUBVwJcAd8BVwJcAd8BVQJXAboDYAHeAZ0CoAH+AbIBtQGzAf8DUgH3
         AjkBOgFgAgABwwH/AsMB8wH/Ao8B6AH/AtMB9QH/AoEB5gH/AgABswH/BAADNQFVAVcCXAHfAVcCXAHf
-        AVUCVwG6A2AB3gGfAqIB/gGyAbUBswH/A1IB9yAAAzUBVQFXAlwB3wFXAlwB3wFVAlcBugNgAd4BnwKi
-        Af4BsgG1AbMB/wNSAfcIAAMpAT8DBwEJEAADNQFVAVcCXAHfAVcCXAHfAVUCVwG6A2AB3gGfAqIB/gGy
+        AVUCVwG6A2AB3gGdAqAB/gGyAbUBswH/A1IB9yAAAzUBVQFXAlwB3wFXAlwB3wFVAlcBugNgAd4BnQKg
+        Af4BsgG1AbMB/wNSAfcIAAMpAT8DBwEJEAADNQFVAVcCXAHfAVcCXAHfAVUCVwG6A2AB3gGdAqAB/gGy
         AbUBswH/A1IB9wgAAykBPwMKAQ4CTgFNAZUDOQFfBAADAwEEA0oBjAGlAakBpwH/AbkBuwG6Af8DXwH7
-        Aa8BsQGwAf4BsAG1AbMB/wG2ArgB/wNSAfcDMQFOAj4BfAHuAhwBpAH6AhwBpAH6Ah8BpAH6AhkBogH6
-        AlIBagHhAwMBBANKAYwBpQGpAacB/wG5AbsBugH/A18B+wGvAbEBsAH+AbABtQGzAf8BtgK4Af8DUgH3
-        AwQBBQMDAQQUAAMDAQQDSgGMAaUBqQGnAf8BuQG7AboB/wNfAfsBrwGxAbAB/gGwAbUBswH/AbYCuAH/
-        A1IB9wMEAQUDAwEEAzgBXgM2AVkDAQECCAADAwEEA0oBjAGlAakBpwH/AbkBuwG6Af8DXwH7Aa8BsQGw
-        Af4BsAG1AbMB/wG2ArgB/wNSAfcDBAEFAwMBBAM4AV4DNgFZAwoBDgJWAVUBsQMPARQDDAEQAUsBTwFN
-        Af8BrgGxAbAB/wHCAsQB/wGSAZYBlAH/AcsBzgHNAf8BtwG7AboB/wG7Ab0BvAH/AVIBUwFSAfcDCgEO
-        Ay8BSQM2AVkDNgFZAzYBWQI1ATYBWAMmATgDDAEQAUsBTwFNAf8BrgGxAbAB/wHCAsQB/wGSAZYBlAH/
-        AcsBzgHNAf8BtwG7AboB/wG7Ab0BvAH/AVIBUwFSAfcDGgEkAygBPRQAAwwBEAFLAU8BTQH/Aa4BsQGw
-        Af8BwgLEAf8BkgGWAZQB/wHLAc4BzQH/AbcBuwG6Af8BuwG9AbwB/wFSAVMBUgH3AxoBJAMoAT0DDQES
-        A0IBdgMKAQ0IAAMMARABSwFPAU0B/wGuAbEBsAH/AcICxAH/AZIBlgGUAf8BywHOAc0B/wG3AbsBugH/
-        AbsBvQG8Af8BUgFTAVIB9wMaASQDKAE9Aw0BEgNCAXYDCgENA0oBigMhATADDAEQAUsBTwFNAf8BuAK6
-        Af8ByAHLAcoB/wGTAZcBlQH/AdMB1gHVAf8BvAHBAb8B/wHAAcIBwQH/AVIBUwFSAfccAAMMARABSwFP
-        AU0B/wG4AroB/wHIAcsBygH/AZMBlwGVAf8B0wHWAdUB/wG8AcEBvwH/AcABwgHBAf8BUgFTAVIB9wMN
-        ARIDQAFwFAADDAEQAUsBTwFNAf8BuAK6Af8ByAHLAcoB/wGTAZcBlQH/AdMB1gHVAf8BvAHBAb8B/wHA
-        AcIBwQH/AVIBUwFSAfcDDQESA0ABcAMFAQcCQgFBAXMDEAEWCAADDAEQAUsBTwFNAf8BuAK6Af8ByAHL
-        AcoB/wGTAZcBlQH/AdMB1gHVAf8BvAHBAb8B/wHAAcIBwQH/AVIBUwFSAfcDDQESA0ABcAMFAQcCQgFB
-        AXMDEAEWAzwBZgMwAUsDDAEQAUsBTwFNAf8BxgHJAcgB/wHaAdwB2wH/AZwBoAGeAf8B5AHnAeYB/wHH
-        AcoByQH/AcQBxgHFAf8BUgFTAVIB9xwAAwwBEAFLAU8BTQH/AcYByQHIAf8B2gHcAdsB/wGcAaABngH/
-        AeQB5wHmAf8BxwHKAckB/wHEAcYBxQH/AVIBUwFSAfcDDgETA0ABcRQAAwwBEAFLAU8BTQH/AcYByQHI
-        Af8B2gHcAdsB/wGcAaABngH/AeQB5wHmAf8BxwHKAckB/wHEAcYBxQH/AVIBUwFSAfcDDgETA0ABcQMF
-        AQcCQgFBAXMDEAEWCAADDAEQAUsBTwFNAf8BxgHJAcgB/wHaAdwB2wH/AZwBoAGeAf8B5AHnAeYB/wHH
-        AcoByQH/AcQBxgHFAf8BUgFTAVIB9wMOARMDQAFxAwUBBwJCAUEBcwMQARYDOwFlAzABSwMLAQ8BQwFJ
-        AUUB/AHEAcYBxQH/AdcC2AH/AaABowGhAf8B9wL4Af8B2QHbAdoB/wHJAcsBygH/AVIBUwFSAfccAAML
-        AQ8BQwFJAUUB/AHEAcYBxQH/AdcC2AH/AaABowGhAf8B9wL4Af8B2QHbAdoB/wHJAcsBygH/AVIBUwFS
-        AfcDHQEpAygBPRQAAwsBDwFDAUkBRQH8AcQBxgHFAf8B1wLYAf8BoAGjAaEB/wH3AvgB/wHZAdsB2gH/
-        AckBywHKAf8BUgFTAVIB9wMdASkDKAE9AwsBDwNCAXUDCgEOCAADCwEPAUMBSQFFAfwBxAHGAcUB/wHX
-        AtgB/wGgAaMBoQH/AfcC+AH/AdkB2wHaAf8ByQHLAcoB/wFSAVMBUgH3Ax0BKQMoAT0DCwEPA0IBdQMK
-        AQ4CSQFIAYgDIgExBAADOgFgAakCqwH/AbcCuQH/AWABYwFhAfQBqgGuAa0B+wHQAtMB/wHKAcwBywH/
-        AVIBUwFSAfcgAAM6AWABqQKrAf8BtwK5Af8BYAFjAWEB9AGqAa4BrQH7AdAC0wH/AcoBzAHLAf8BUgFT
-        AVIB9yAAAzoBYAGpAqsB/wG3ArkB/wFgAWMBYQH0AaoBrgGtAfsB0ALTAf8BygHMAcsB/wFSAVMBUgH3
-        CAADMQFNAzsBZAMBAQIMAAM6AWABqQKrAf8BtwK5Af8BYAFjAWEB9AGqAa4BrQH7AdAC0wH/AcoBzAHL
-        Af8BUgFTAVIB9wgAAzEBTQM7AWQDCAELA1MBqgMQARYEAAMgAS8DRgF+A0YBfgM7AWQDUwGqAYEBhQGE
-        AfwBygHMAcsB/wFSAVMBUgH3IAADIAEvA0YBfgNGAX4DOwFkA1MBqgGBAYUBhAH8AcoBzAHLAf8BUgFT
-        AVIB9yAAAyABLwNGAX4DRgF+AzsBZANTAaoBgQGFAYQB/AHKAcwBywH/AVIBUwFSAfcIAAMtAUUDDQES
-        EAADIAEvA0YBfgNGAX4DOwFkA1MBqgGBAYUBhAH8AcoBzAHLAf8BUgFTAVIB9wgAAy0BRQMRARcDSgGN
-        AzsBYwMAAQEUAAMKAQ4DUQGfAckBywHKAf8BUgFTAVIB9zAAAwoBDgNRAZ8ByQHLAcoB/wFSAVMBUgH3
-        MAADCgEOA1EBnwHJAcsBygH/AVIBUwFSAfcwAAMKAQ4DUQGfAckBywHKAf8BUgFTAVIB9wwAAy8BSgJM
-        AUsBkAMEAQUcAAMpAT4DgAHxAVwBXgFcAc40AAMpAT4DgAHxAVwBXgFcAc40AAMpAT4DgAHxAVwBXgFc
-        Ac40AAMpAT4DgAHxAVwBXgFcAc4MAAMTARoDBwEKIAADCgENAzABTAMcASg0AAMKAQ0DMAFMAxwBKDQA
-        AwoBDQMwAUwDHAEoNAADCgENAzABTAMcASj/AB0AAUIBTQE+BwABPgMAASgDAAFAAwABIAMAAQEBAAEB
-        BgABARYAA/+BAAOAAf8BgAH/AYAB/wGAAQABgAF/AYABfwGAAX8DAAF/AQABfwEAAXMBgAEAAYABfwGA
-        AX8BgAFxAYABAAGAAX8BgAFnAYABYQMAAR8BAAEDBQABHwEAAQMDAAF/AQABHwEAAQMDAAF/AQABHwEA
-        AQMDAAF/AQABHwEAAQMCAAGAAX8BgAF/AYABYwGAAWABgAF/AYABfwGAAWcBgAFgAfgBfwH4AX8B+AF/
-        AfgBcQH8AX8B/AF/AfwBfwH8AXMB/AF/AfwBfwH8AX8B/AF/CP8L
+        Aa0BrwGuAf4BsAG1AbMB/wG2ArgB/wNSAfcDMQFOAkIBeQHuAh0BogH6Ah0BogH6AiABogH6AhwBoAH6
+        AlQBaAHhAwMBBANKAYwBpQGpAacB/wG5AbsBugH/A18B+wGtAa8BrgH+AbABtQGzAf8BtgK4Af8DUgH3
+        AwQBBQMDAQQUAAMDAQQDSgGMAaUBqQGnAf8BuQG7AboB/wNfAfsBrQGvAa4B/gGwAbUBswH/AbYCuAH/
+        A1IB9wMEAQUDAwEEAzgBXgM2AVkDAQECCAADAwEEA0oBjAGlAakBpwH/AbkBuwG6Af8DXwH7Aa0BrwGu
+        Af4BsAG1AbMB/wG2ArgB/wNSAfcDBAEFAwMBBAM4AV4DNgFZAwoBDgJWAVUBsQMPARQDDAEQAUoBTgFM
+        Af8BrgGxAbAB/wHCAsQB/wGSAZYBlAH/AcsBzgHNAf8BtwG7AboB/wG7Ab0BvAH/A1IB9wMKAQ4DLwFJ
+        AzYBWQM2AVkDNgFZAjUBNgFYAyYBOAMMARABSgFOAUwB/wGuAbEBsAH/AcICxAH/AZIBlgGUAf8BywHO
+        Ac0B/wG3AbsBugH/AbsBvQG8Af8DUgH3AxoBJAMoAT0UAAMMARABSgFOAUwB/wGuAbEBsAH/AcICxAH/
+        AZIBlgGUAf8BywHOAc0B/wG3AbsBugH/AbsBvQG8Af8DUgH3AxoBJAMoAT0DDQESA0IBdgMKAQ0IAAMM
+        ARABSgFOAUwB/wGuAbEBsAH/AcICxAH/AZIBlgGUAf8BywHOAc0B/wG3AbsBugH/AbsBvQG8Af8DUgH3
+        AxoBJAMoAT0DDQESA0IBdgMKAQ0DSgGKAyEBMAMMARABSgFOAUwB/wG4AroB/wHIAcsBygH/AZMBlwGV
+        Af8B0wHWAdUB/wG8AcEBvwH/AcABwgHBAf8DUgH3HAADDAEQAUoBTgFMAf8BuAK6Af8ByAHLAcoB/wGT
+        AZcBlQH/AdMB1gHVAf8BvAHBAb8B/wHAAcIBwQH/A1IB9wMNARIDQAFwFAADDAEQAUoBTgFMAf8BuAK6
+        Af8ByAHLAcoB/wGTAZcBlQH/AdMB1gHVAf8BvAHBAb8B/wHAAcIBwQH/A1IB9wMNARIDQAFwAwUBBwJC
+        AUEBcwMQARYIAAMMARABSgFOAUwB/wG4AroB/wHIAcsBygH/AZMBlwGVAf8B0wHWAdUB/wG8AcEBvwH/
+        AcABwgHBAf8DUgH3Aw0BEgNAAXADBQEHAkIBQQFzAxABFgM8AWYDMAFLAwwBEAFKAU4BTAH/AcYByQHI
+        Af8B2gHcAdsB/wGcAaABngH/AeQB5wHmAf8BxwHKAckB/wHEAcYBxQH/A1IB9xwAAwwBEAFKAU4BTAH/
+        AcYByQHIAf8B2gHcAdsB/wGcAaABngH/AeQB5wHmAf8BxwHKAckB/wHEAcYBxQH/A1IB9wMOARMDQAFx
+        FAADDAEQAUoBTgFMAf8BxgHJAcgB/wHaAdwB2wH/AZwBoAGeAf8B5AHnAeYB/wHHAcoByQH/AcQBxgHF
+        Af8DUgH3Aw4BEwNAAXEDBQEHAkIBQQFzAxABFggAAwwBEAFKAU4BTAH/AcYByQHIAf8B2gHcAdsB/wGc
+        AaABngH/AeQB5wHmAf8BxwHKAckB/wHEAcYBxQH/A1IB9wMOARMDQAFxAwUBBwJCAUEBcwMQARYDOwFl
+        AzABSwMLAQ8BQQFHAUMB/AHEAcYBxQH/AdcC2AH/AaABowGhAf8B9wL4Af8B2QHbAdoB/wHJAcsBygH/
+        A1IB9xwAAwsBDwFBAUcBQwH8AcQBxgHFAf8B1wLYAf8BoAGjAaEB/wH3AvgB/wHZAdsB2gH/AckBywHK
+        Af8DUgH3Ax0BKQMoAT0UAAMLAQ8BQQFHAUMB/AHEAcYBxQH/AdcC2AH/AaABowGhAf8B9wL4Af8B2QHb
+        AdoB/wHJAcsBygH/A1IB9wMdASkDKAE9AwsBDwNCAXUDCgEOCAADCwEPAUEBRwFDAfwBxAHGAcUB/wHX
+        AtgB/wGgAaMBoQH/AfcC+AH/AdkB2wHaAf8ByQHLAcoB/wNSAfcDHQEpAygBPQMLAQ8DQgF1AwoBDgJJ
+        AUgBiAMiATEEAAM6AWABqQKrAf8BtwK5Af8BYAFjAWEB9AGmAaoBqQH7AdAC0wH/AcoBzAHLAf8DUgH3
+        IAADOgFgAakCqwH/AbcCuQH/AWABYwFhAfQBpgGqAakB+wHQAtMB/wHKAcwBywH/A1IB9yAAAzoBYAGp
+        AqsB/wG3ArkB/wFgAWMBYQH0AaYBqgGpAfsB0ALTAf8BygHMAcsB/wNSAfcIAAMxAU0DOwFkAwEBAgwA
+        AzoBYAGpAqsB/wG3ArkB/wFgAWMBYQH0AaYBqgGpAfsB0ALTAf8BygHMAcsB/wNSAfcIAAMxAU0DOwFk
+        AwgBCwNTAaoDEAEWBAADIAEvA0YBfgNGAX4DOwFkA1MBqgF+AYIBgQH8AcoBzAHLAf8DUgH3IAADIAEv
+        A0YBfgNGAX4DOwFkA1MBqgF+AYIBgQH8AcoBzAHLAf8DUgH3IAADIAEvA0YBfgNGAX4DOwFkA1MBqgF+
+        AYIBgQH8AcoBzAHLAf8DUgH3CAADLQFFAw0BEhAAAyABLwNGAX4DRgF+AzsBZANTAaoBfgGCAYEB/AHK
+        AcwBywH/A1IB9wgAAy0BRQMRARcDSgGNAzsBYwMAAQEUAAMKAQ4DUQGfAckBywHKAf8DUgH3MAADCgEO
+        A1EBnwHJAcsBygH/A1IB9zAAAwoBDgNRAZ8ByQHLAcoB/wNSAfcwAAMKAQ4DUQGfAckBywHKAf8DUgH3
+        DAADLwFKAkwBSwGQAwQBBRwAAykBPgN+AfEBXAFeAVwBzjQAAykBPgN+AfEBXAFeAVwBzjQAAykBPgN+
+        AfEBXAFeAVwBzjQAAykBPgN+AfEBXAFeAVwBzgwAAxMBGgMHAQogAAMKAQ0DMAFMAxwBKDQAAwoBDQMw
+        AUwDHAEoNAADCgENAzABTAMcASg0AAMKAQ0DMAFMAxwBKP8AHQABQgFNAT4HAAE+AwABKAMAAUADAAEg
+        AwABAQEAAQEGAAEBFgAD/4EAA4AB/wGAAf8BgAH/AYABAAGAAX8BgAF/AYABfwMAAX8BAAF/AQABcwGA
+        AQABgAF/AYABfwGAAXEBgAEAAYABfwGAAWcBgAFhAwABHwEAAQMFAAEfAQABAwMAAX8BAAEfAQABAwMA
+        AX8BAAEfAQABAwMAAX8BAAEfAQABAwIAAYABfwGAAX8BgAFjAYABYAGAAX8BgAF/AYABZwGAAWAB+AF/
+        AfgBfwH4AX8B+AFxAfwBfwH8AX8B/AF/AfwBcwH8AX8B/AF/AfwBfwH8AX8I/ws=
 </value>
   </data>
   <metadata name="ilPlay.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
@@ -197,41 +195,47 @@
     <value>
         AAEAAAD/////AQAAAAAAAAAMAgAAAFdTeXN0ZW0uV2luZG93cy5Gb3JtcywgVmVyc2lvbj0yLjAuMC4w
         LCBDdWx0dXJlPW5ldXRyYWwsIFB1YmxpY0tleVRva2VuPWI3N2E1YzU2MTkzNGUwODkFAQAAACZTeXN0
-        ZW0uV2luZG93cy5Gb3Jtcy5JbWFnZUxpc3RTdHJlYW1lcgEAAAAERGF0YQcCAgAAAAkDAAAADwMAAAB2
-        BwAAAk1TRnQBSQFMAgEBAgEAATABAAEwAQABEAEAARABAAT/ASEBAAj/AUIBTQE2BwABNgMAASgDAAFA
-        AwABEAMAAQEBAAEgBgABEBoAAwcECQEMAwMBBPQAAw0BEQNQAZsDMQFOAwoBDQMBAQLsAAMNAREBXAFd
-        AVwB+AGQApEB+ANPAZcDHQEpAwYBCAMAAQEoAAMMARADHwEtAyEBMAMhATADIQEwAyEBMAMhATADIQEw
-        AyEBMAMgAS4DDQESkAADDQERAWABZwFjAfgB+QL6Af8BvgK/AfsBaQFsAWkB3gNHAYADFgEeAwQBBQMA
-        AQEgAAMfAS0BbwFwAW8B9QGpAasBqgH/AakBqwGqAf8BqQGrAaoB/wGpAasBqgH/AakBqwGqAf8BqQGr
-        AaoB/wGpAasBqgH/AXkCegH4AyEBMJAAAw0BEQFgAWcBYwH4AfYC9wH/AfAB8wHyAf8D9QH/AbgBugG4
-        AfkDYAHeAzoBYAMKAQ4gAAMhATABlwGaAZgB/AP1Af8B8ALxAf8B7gHvAe4B/wHsAe4B7QH/AeoB7QHs
-        Af8B6AHrAeoB/wHqAewB6wH/AakBqwGqAf8DIwEzkAADDgETAWABZwFjAfgB9wL4Af8B8QH0AfMB/wH1
-        AfcB9gH/AfoB+wH6Af8D/AH/AZoBmwGaAfgDVgGrAyoBQQMLAQ8DAAEBFAADIgEyAZcBmgGYAfwB7wHx
-        AfAB/wHpAewB6wH/AecB6gHpAf8B5gHpAecB/wHkAecB5gH/AeIB5QHkAf8B5AHoAeYB/wGpAasBqgH/
-        AyQBNZAAAxABFQNqAfkB9QH3AfYB/wHtAfAB7gH/Ae8B8QHwAf8B8QHzAfIB/wHxAfQB8gH/AfMB9QH0
-        Af8DyAH8AYACgQHrA04BmQMgAS4DBAEGEAADIwEzAZcBmgGYAfwB5gHqAegB/wHgAeQB4gH/Ad8B4wHh
-        Af8B3gHiAeAB/wHcAeIB3wH/AdsB4AHeAf8B3wHjAeIB/wGpAasBqgH/AyUBN5AAAxEBFwNqAfkB8wH2
-        AfQB/wHoAewB6gH/AegB7AHqAf8B5wHrAekB/wHmAeoB6AH/AeYB6gHoAf8B5AHpAecB/wH0AfYB9QH/
-        AdIB1AHTAf4BVgFcAVkB+gMpAT4DBwEJDAADJAE1AZYBmgGXAfwB4wHmAeQB/wHbAeAB3QH/AdgB3gHb
-        Af8B1gHdAdoB/wHWAdwB2QH/AdQB2gHXAf8B1wHdAdoB/wGpAasBqgH/AyYBOJAAAxIBGQNqAfkB9gH3
-        AfYB/wHtAe8B7gH/Ae0B8AHuAf8B7QHwAe4B/wHsAe8B7QH/Ae0B8AHuAf8B7wHyAfEB/wG7Ab4BuwH7
-        A2YB1wNKAYsDFwEgAwQBBgwAAyQBNgGWAZgBlwH8AecC6QH/AeEB5QHjAf8B4QHlAeMB/wHhAeUB4wH/
-        AeAB5AHjAf8B4AHkAeIB/wHkAegB5gH/AakBqwGqAf8DJwE6kAADFAEcA2oB+QH0AfUB9AH/AecB6wHp
-        Af8B6AHrAeoB/wHpAe0B6wH/AfMB9gH0Af8B2AHaAdkB/gOHAfcDTAGTAykBPgMKAQ4DAgEDEAADJgE4
-        AZYBmAGXAfwB5AHoAecB/wHfAeMB4QH/Ad8B4wHhAf8B3wHjAeEB/wHfAeMB4QH/Ad8B4wHhAf8B4wHn
-        AeUB/wGpAasBqgH/AygBPJAAAxUBHQNqAfkB8wH1AfQB/wHnAesB6QH/AewB7wHtAf8B4gHjAeIB/gGm
-        AacBpgH4AVkCWwHEAy4BSAMQARUDAgEDGAADJgE5AZYBmAGXAfwB5gHqAekB/wHiAeYB5AH/AeIB5wHl
-        Af8B4gHnAeUB/wHiAecB5QH/AeMB5wHlAf8B5wHqAegB/wGpAasBqgH/AykBPpAAAxUBHQNqAfkB+AL5
-        Af8B8QHzAfIB/wGoAaoBqQH5AVsCXAHHA0IBdgMXASADBgEIIAADJgE5AXIBdAFzAfYBqQGrAaoB/wGp
-        AasBqgH/AakBqwGqAf8BqQGrAaoB/wGpAasBqgH/AakBqwGqAf8BqQGrAaoB/wFuAXcBcQH5AykBPpAA
-        AxUBHQNqAfkBzQHPAc4B/gFnAWoBZwH2A0cBgAMdASoDBAEFAwABASQAAxUBHQMpAT8DKgFBAyoBQQMq
-        AUEDKgFBAyoBQQMqAUEDKgFBAyoBQAMXASCQAAMVAR0DWQHXAVQCVgGrAyUBNwMKAQ4DAQECMwABAQMA
-        AQEDAAEBAwABAQMAAQEDAAEBAwABAQMAAQEDAAEBlAADEQEXAygBPQMRARcDAwEE/wDpAAFCAU0BPgcA
-        AT4DAAEoAwABQAMAARADAAEBAQABAQUAAYAXAAP/AQABxwP/BAABwQP/BAABwAF/AeABAwQAAcABHwHg
-        AQMEAAHAAR8B4AEDBAABwAEDAeABAwQAAcABAQHgAQMEAAHAAQAB4AEDBAABwAEAAeABAwQAAcABAQHg
-        AQMEAAHAAQcB4AEDBAABwAEfAeABAwQAAcABPwHgAQMEAAHAAf8B8AEHBAABwwP/BAAE/wQACw==
+        ZW0uV2luZG93cy5Gb3Jtcy5JbWFnZUxpc3RTdHJlYW1lcgEAAAAERGF0YQcCAgAAAAkDAAAADwMAAABy
+        BwAAAk1TRnQBSQFMAgEBAgEAATgBAAE4AQABEAEAARABAAT/ASEBAAj/AUIBTQE2BwABNgMAASgDAAFA
+        AwABEAMAAQEBAAEgBgABEBoAAwcECQEMAwMBBPQAAw0BEQNQAZsDMQFOAwoBDQMBAQLsAAMNAREDXAH4
+        AY0CjgH4A08BlwMdASkDBgEIAwABASgAAwwBEAMfAS0DIQEwAyEBMAMhATADIQEwAyEBMAMhATADIQEw
+        AyABLgMNARKQAAMNAREBXgFlAWEB+AH5AvoB/wG6ArsB+wFmAWgBZgHeA0cBgAMWAR4DBAEFAwABASAA
+        Ax8BLQFuAW8BbgH1AakBqwGqAf8BqQGrAaoB/wGpAasBqgH/AakBqwGqAf8BqQGrAaoB/wGpAasBqgH/
+        AakBqwGqAf8BeAJ5AfgDIQEwkAADDQERAV4BZQFhAfgB9gL3Af8B8AHzAfIB/wP1Af8BtAG2AbQB+QNg
+        Ad4DOgFgAwoBDiAAAyEBMAGUAZcBlQH8A/UB/wHwAvEB/wHuAe8B7gH/AewB7gHtAf8B6gHtAewB/wHo
+        AesB6gH/AeoB7AHrAf8BqQGrAaoB/wMjATOQAAMOARMBXgFlAWEB+AH3AvgB/wHxAfQB8wH/AfUB9wH2
+        Af8B+gH7AfoB/wP8Af8BmAGZAZgB+ANWAasDKgFBAwsBDwMAAQEUAAMiATIBlAGXAZUB/AHvAfEB8AH/
+        AekB7AHrAf8B5wHqAekB/wHmAekB5wH/AeQB5wHmAf8B4gHlAeQB/wHkAegB5gH/AakBqwGqAf8DJAE1
+        kAADEAEVA2oB+QH1AfcB9gH/Ae0B8AHuAf8B7wHxAfAB/wHxAfMB8gH/AfEB9AHyAf8B8wH1AfQB/wPF
+        AfwBfAJ9AesDTgGZAyABLgMEAQYQAAMjATMBlAGXAZUB/AHmAeoB6AH/AeAB5AHiAf8B3wHjAeEB/wHe
+        AeIB4AH/AdwB4gHfAf8B2wHgAd4B/wHfAeMB4gH/AakBqwGqAf8DJQE3kAADEQEXA2oB+QHzAfYB9AH/
+        AegB7AHqAf8B6AHsAeoB/wHnAesB6QH/AeYB6gHoAf8B5gHqAegB/wHkAekB5wH/AfQB9gH1Af8B0AHS
+        AdEB/gFUAVoBVwH6AykBPgMHAQkMAAMkATUBkwGXAZQB/AHjAeYB5AH/AdsB4AHdAf8B2AHeAdsB/wHW
+        Ad0B2gH/AdYB3AHZAf8B1AHaAdcB/wHXAd0B2gH/AakBqwGqAf8DJgE4kAADEgEZA2oB+QH2AfcB9gH/
+        Ae0B7wHuAf8B7QHwAe4B/wHtAfAB7gH/AewB7wHtAf8B7QHwAe4B/wHvAfIB8QH/AbcBugG3AfsDYwHX
+        A0oBiwMXASADBAEGDAADJAE2AZMBlQGUAfwB5wLpAf8B4QHlAeMB/wHhAeUB4wH/AeEB5QHjAf8B4AHk
+        AeMB/wHgAeQB4gH/AeQB6AHmAf8BqQGrAaoB/wMnATqQAAMUARwDagH5AfQB9QH0Af8B5wHrAekB/wHo
+        AesB6gH/AekB7QHrAf8B8wH2AfQB/wHWAdgB1wH+A4YB9wNMAZMDKQE+AwoBDgMCAQMQAAMmATgBkwGV
+        AZQB/AHkAegB5wH/Ad8B4wHhAf8B3wHjAeEB/wHfAeMB4QH/Ad8B4wHhAf8B3wHjAeEB/wHjAecB5QH/
+        AakBqwGqAf8DKAE8kAADFQEdA2oB+QHzAfUB9AH/AecB6wHpAf8B7AHvAe0B/wHgAeEB4AH+AaEBogGh
+        AfgBWQJbAcQDLgFIAxABFQMCAQMYAAMmATkBkwGVAZQB/AHmAeoB6QH/AeIB5gHkAf8B4gHnAeUB/wHi
+        AecB5QH/AeIB5wHlAf8B4wHnAeUB/wHnAeoB6AH/AakBqwGqAf8DKQE+kAADFQEdA2oB+QH4AvkB/wHx
+        AfMB8gH/AaQBpgGlAfkBWgJbAccDQgF2AxcBIAMGAQggAAMmATkBcAFyAXEB9gGpAasBqgH/AakBqwGq
+        Af8BqQGrAaoB/wGpAasBqgH/AakBqwGqAf8BqQGrAaoB/wGpAasBqgH/AWsBdAFuAfkDKQE+kAADFQEd
+        A2oB+QHLAc0BzAH+AWQBZwFkAfYDRwGAAx0BKgMEAQUDAAEBJAADFQEdAykBPwMqAUEDKgFBAyoBQQMq
+        AUEDKgFBAyoBQQMqAUEDKgFAAxcBIJAAAxUBHQNZAdcBVAJWAasDJQE3AwoBDgMBAQIzAAEBAwABAQMA
+        AQEDAAEBAwABAQMAAQEDAAEBAwABAQMAAQGUAAMRARcDKAE9AxEBFwMDAQT/AOkAAUIBTQE+BwABPgMA
+        ASgDAAFAAwABEAMAAQEBAAEBBQABgBcAA/8BAAHHA/8EAAHBA/8EAAHAAX8B4AEDBAABwAEfAeABAwQA
+        AcABHwHgAQMEAAHAAQMB4AEDBAABwAEBAeABAwQAAcABAAHgAQMEAAHAAQAB4AEDBAABwAEBAeABAwQA
+        AcABBwHgAQMEAAHAAR8B4AEDBAABwAE/AeABAwQAAcAB/wHwAQcEAAHDA/8EAAT/BAAL
 </value>
   </data>
+  <metadata name="toolTip1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>197, 17</value>
+  </metadata>
+  <metadata name="toolTip1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>197, 17</value>
+  </metadata>
   <assembly alias="System.Drawing" name="System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
   <data name="$this.Icon" type="System.Drawing.Icon, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
